--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
     <title>SWP - Systematic Withdrawal Plan</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@@ -34,7 +35,7 @@
 
         h1 {
             text-align: center;
-            background-color: #9B4DCA;
+            background-color: #4d73ca;
             color: white;
             padding: 5px;
             font-size: 25px;
@@ -71,7 +72,7 @@
         }
 
         button {
-            border: 0.1rem solid #9b4dca;
+            border: 0.1rem solid #4d73ca;
             border-radius: 4px;
             background-color: white;
             color: 9b4dca;
@@ -88,7 +89,7 @@
         }
 
         button:visited {
-            border: 0.1rem solid #9b4dca;
+            border: 0.1rem solid #4d73ca;
             border-radius: 4px;
             background-color: white;
             color: 9b4dca;
@@ -105,9 +106,9 @@
         }
 
         button:hover {
-            border: 0.1rem solid #9b4dca;
+            border: 0.1rem solid #4d73ca;
             border-radius: 4px;
-            background-color: #9b4dca;
+            background-color: #4d73ca;
             color: white;
             cursor: pointer;
             display: inline-block;
@@ -259,7 +260,7 @@
                     label: [Title_Label], // Serves as 'title' for the chart
                     fill: true,
                     backgroundColor: "rgba(155, 77, 202, 0.2)",
-                    borderColor: "#9B4DCA",
+                    borderColor: "#4d73ca",
                     data: YAxis, // Setting graph values for the Y-Axis
                     fill: true,
                 },
@@ -289,14 +290,14 @@
                     title: {
                         display: true,
                         text: "← Balance →",
-                        color: "#9B4DCA",
+                        color: "#4d73ca",
                     },
                     },
                     x: { // adds a label for X axis
                     title: {
                         display: true,
                         text: "← Months →",
-                        color: "#9B4DCA",
+                        color: "#4d73ca",
                     },
                     },
                 },
