--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
     <title>SWP - Systematic Withdrawal Plan</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@@ -59,11 +58,11 @@
             border-radius: 7px;
             border-width: 0.2px;
             outline: none;
-            border-color: rgba(155, 77, 202, 0.5);
+            border-color: rgba(77, 115, 202, 0.5);
         }
 
         .chartBox {
-            width: 65rem;
+            width: 55rem;
             padding: 5px;
             border-radius: 50px;
             border: solid 2px rgb(255, 255, 255);
@@ -75,7 +74,7 @@
             border: 0.1rem solid #4d73ca;
             border-radius: 4px;
             background-color: white;
-            color: 9b4dca;
+            color: 4d73ca;
             cursor: pointer;
             display: inline-block;
             font-size: 15px;
@@ -92,7 +91,7 @@
             border: 0.1rem solid #4d73ca;
             border-radius: 4px;
             background-color: white;
-            color: 9b4dca;
+            color: 4d73ca;
             cursor: pointer;
             display: inline-block;
             font-size: 15px;
@@ -246,8 +245,7 @@
             }).then(resp => resp.json()).then(body => {
                 let JSON_Data1 = JSON.parse(body.output.data);
                 let YAxis = JSON_Data1.map(JD1 => JD1['Balance at End'])
-                let XAxis = YAxis.length;
-                XAxis = Array.from({length: XAxis}, (_, i) => i + 1)
+                let XAxis = JSON_Data1.map(JD1 => JD1.Year+'y '+JD1.Month+'m')
 
             // Define chart properties
             const labels = XAxis; // Adding X labels
@@ -259,7 +257,7 @@
                 {
                     label: [Title_Label], // Serves as 'title' for the chart
                     fill: true,
-                    backgroundColor: "rgba(155, 77, 202, 0.2)",
+                    backgroundColor: "rgba(77, 115, 202, 0.2)",
                     borderColor: "#4d73ca",
                     data: YAxis, // Setting graph values for the Y-Axis
                     fill: true,
@@ -275,7 +273,7 @@
                     tooltip: { // Customize tooltip
                     callbacks: {
                         title: (context)=> {
-                        var title_string = 'Month: '+ context[0]['label'];
+                        var title_string = 'Time: '+ context[0]['label'];
                         return title_string;
                         },
                         label: (context)=> {
@@ -296,7 +294,7 @@
                     x: { // adds a label for X axis
                     title: {
                         display: true,
-                        text: "← Months →",
+                        text: "← Time (in Years and Months) →",
                         color: "#4d73ca",
                     },
                     },
@@ -327,7 +325,7 @@
                     chartStatus.destroy();
                 }
                 const myChart = new Chart(document.getElementById("myChart"), config);
-                document.querySelector('.chartBox').style.borderColor = 'rgba(77, 115, 202, 0.3)';
+                document.querySelector('.chartBox').style.borderColor = 'rgba(77, 115, 202, 0.5)';
                 // Adding table
                 // Add Table description
                 document.getElementById('yearlySpread').textContent = 'Detailed monthly spread';
