--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
 
         #swpForm {
-            width: 470px;
+            width: 50%;
             height: 13rem;
             margin: auto;
         }
@@ -51,9 +51,9 @@
             margin: 15px;
         }
 		
-	table{
-		border-collapse: collapse;
-	}
+		table{
+			border-collapse: collapse;
+		}
         label {
             justify-self: start;
         }
@@ -146,7 +146,7 @@
 
         @media only screen and (max-width: 800px) {
             .chartBox {
-            width: 35rem;
+            width: 98%;
             padding: 2px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
@@ -154,18 +154,20 @@
             margin: auto;
             }
             .det-table {
-            width: 1050px;
+            width: 100%;
             padding: 2px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
             background: white;
             }
+			#swpForm {
+            width: 75%;
         }
 
         @media only screen and (max-width: 650px) {
             .chartBox {
             width: 98%;
-            padding: 5px;
+            padding: 1px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
             background: white;
@@ -178,6 +180,10 @@
             border: solid 2px rgb(255, 255, 255);
             background: white;
             }
+			#swpForm {
+            width: 100%;
+        }
+
         }
     </style>
 </head>
