--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         }
 
         h1 {
+	    width:100%;
             text-align: center;
             background-color: #4d73ca;
             color: white;
