--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         h1 {
-	    width:100%;
+			width:100%;
             text-align: center;
             background-color: #4d73ca;
             color: white;
@@ -166,7 +166,17 @@
         }
 
         @media only screen and (max-width: 650px) {
-            .chartBox {
+        * {
+
+            font-size: 15px;
+        }            
+			
+			input {
+			width:90px;
+			font-size:15px;
+			}
+			
+			.chartBox {
             width: 98%;
             padding: 1px;
             border-radius: 5px;
