--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
 
         #swpForm {
-            width: 50%;
+            width: 470px;
             height: 13rem;
             margin: auto;
         }
@@ -34,7 +34,6 @@
         }
 
         h1 {
-			width:100%;
             text-align: center;
             background-color: #4d73ca;
             color: white;
@@ -51,10 +50,7 @@
             gap: 0.2rem;
             margin: 15px;
         }
-		
-		table{
-			border-collapse: collapse;
-		}
+
         label {
             justify-self: start;
         }
@@ -142,12 +138,12 @@
 
         th, td {
             border: 1px solid black;
-            padding: 5px;
+            padding: 2px;
         }
 
         @media only screen and (max-width: 800px) {
             .chartBox {
-            width: 98%;
+            width: 35rem;
             padding: 2px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
@@ -155,46 +151,30 @@
             margin: auto;
             }
             .det-table {
-            width: 100%;
+            width: 1050px;
             padding: 2px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
             background: white;
             }
-			#swpForm {
-            width: 75%;
         }
 
         @media only screen and (max-width: 650px) {
-        * {
-
-            font-size: 15px;
-        }            
-			
-			input {
-			width:90px;
-			font-size:15px;
-			}
-			
-			.chartBox {
-            width: 98%;
-            padding: 1px;
+            .chartBox {
+            width: 22rem;
+            padding: 5px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
             background: white;
             margin: auto;
             }
             .det-table {
-            width: 95%;
+            width: 200px;
             padding: 2px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
             background: white;
             }
-			#swpForm {
-            width: 100%;
-        }
-
         }
     </style>
 </head>
