--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
     <title>SWP - Systematic Withdrawal Plan</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@@ -23,7 +22,7 @@
         }
 
         #swpForm {
-            width: 470px;
+            width: 50%;
             height: 13rem;
             margin: auto;
         }
@@ -50,7 +49,11 @@
             gap: 0.2rem;
             margin: 15px;
         }
-
+		
+		table{
+			border-collapse: collapse;
+		}
+		
         label {
             justify-self: start;
         }
@@ -59,11 +62,11 @@
             border-radius: 7px;
             border-width: 0.2px;
             outline: none;
-            border-color: rgba(155, 77, 202, 0.5);
+            border-color: rgba(77, 115, 202, 0.5);
         }
 
         .chartBox {
-            width: 65rem;
+            width: 55rem;
             padding: 5px;
             border-radius: 50px;
             border: solid 2px rgb(255, 255, 255);
@@ -75,7 +78,7 @@
             border: 0.1rem solid #4d73ca;
             border-radius: 4px;
             background-color: white;
-            color: 9b4dca;
+            color: 4d73ca;
             cursor: pointer;
             display: inline-block;
             font-size: 15px;
@@ -92,7 +95,7 @@
             border: 0.1rem solid #4d73ca;
             border-radius: 4px;
             background-color: white;
-            color: 9b4dca;
+            color: 4d73ca;
             cursor: pointer;
             display: inline-block;
             font-size: 15px;
@@ -143,7 +146,7 @@
 
         @media only screen and (max-width: 800px) {
             .chartBox {
-            width: 35rem;
+            width: 98%;
             padding: 2px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
@@ -151,30 +154,49 @@
             margin: auto;
             }
             .det-table {
-            width: 1050px;
+            width: 100%;
             padding: 2px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
             background: white;
             }
+			#swpForm {
+            width: 75%;
+			}
+
         }
 
         @media only screen and (max-width: 650px) {
-            .chartBox {
-            width: 22rem;
-            padding: 5px;
+			
+			* {
+            font-size: 15px;
+			}            
+			
+			input {
+			width:90px;
+			font-size:15px;
+			}
+			
+			.chartBox {
+            width: 98%;
+            padding: 1px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
             background: white;
             margin: auto;
             }
+			
             .det-table {
-            width: 200px;
+            width: 95%;
             padding: 2px;
             border-radius: 5px;
             border: solid 2px rgb(255, 255, 255);
             background: white;
             }
+			
+			#swpForm {
+            width: 100%;
+			}
         }
     </style>
 </head>
@@ -246,8 +268,7 @@
             }).then(resp => resp.json()).then(body => {
                 let JSON_Data1 = JSON.parse(body.output.data);
                 let YAxis = JSON_Data1.map(JD1 => JD1['Balance at End'])
-                let XAxis = YAxis.length;
-                XAxis = Array.from({length: XAxis}, (_, i) => i + 1)
+                let XAxis = JSON_Data1.map(JD1 => JD1.Year+'y '+JD1.Month+'m')
 
             // Define chart properties
             const labels = XAxis; // Adding X labels
@@ -259,7 +280,7 @@
                 {
                     label: [Title_Label], // Serves as 'title' for the chart
                     fill: true,
-                    backgroundColor: "rgba(155, 77, 202, 0.2)",
+                    backgroundColor: "rgba(77, 115, 202, 0.2)",
                     borderColor: "#4d73ca",
                     data: YAxis, // Setting graph values for the Y-Axis
                     fill: true,
@@ -275,7 +296,7 @@
                     tooltip: { // Customize tooltip
                     callbacks: {
                         title: (context)=> {
-                        var title_string = 'Month: '+ context[0]['label'];
+                        var title_string = 'Time: '+ context[0]['label'];
                         return title_string;
                         },
                         label: (context)=> {
@@ -296,7 +317,7 @@
                     x: { // adds a label for X axis
                     title: {
                         display: true,
-                        text: "← Months →",
+                        text: "← Time (in Years and Months) →",
                         color: "#4d73ca",
                     },
                     },
@@ -327,7 +348,7 @@
                     chartStatus.destroy();
                 }
                 const myChart = new Chart(document.getElementById("myChart"), config);
-                document.querySelector('.chartBox').style.borderColor = 'rgba(77, 115, 202, 0.3)';
+                document.querySelector('.chartBox').style.borderColor = 'rgba(77, 115, 202, 0.5)';
                 // Adding table
                 // Add Table description
                 document.getElementById('yearlySpread').textContent = 'Detailed monthly spread';
