--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             height: 13rem;
             margin: auto;
         }
+	#yearlySpread{
+	     background: #4d73ca;
+    	     color: white;
+    	     font-size: 20px;	
+	}
 
         fieldset {
             width: 1000px;
